package sensor.controller;

public class ControllerSensor {
    public void start(){

    }
}
